cotoami_desktop/ui/assets/css/app/_coto-flow.scss
.coto-flow {

  .scroll-area {
    .simplebar-content {
      // override the default padding to make a space for
      // the coto toolbar of the first coto.
      padding-top: 20px !important;
    }
  }

  .flow-entry {
    border-bottom: 1px solid var(--pane-border-color);

    article.coto {
      padding: 0;
      padding-top: 10px;

      ul.parents {
        padding-top: 10px;
        padding-bottom: 10px;
      }

      >header {
        padding: 0 var(--block-spacing-horizontal);

        address.author img.node-icon {
          width: 32px;
          height: 32px;
          margin-right: 10px;
        }
      }

      div.content {
        section.media-content {
          // fit to the left and right border
          padding-left: 0;
          padding-right: 0;
        }
      }

      div.padding-bottom {
        min-height: 12px;
      }
    }
  }

  .more {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
  }
}

